Fix wrapping around an image in exercises

--- a/src/scripts/modules/media/body/content-baked.less
+++ b/src/scripts/modules/media/body/content-baked.less
@@ -278,10 +278,20 @@ h1.example-title .text {
 }
 .os-eoc [data-type="exercise"],
 .os-eoc .exercise {
-  p { display: inline; }
+  p {display: inline; }
   [data-type="problem"] > .number {
     .exercise-number();
   }
+
+  img {
+    float: left;
+    margin-right: 10px;
+  }
+
+  ol {
+    overflow: auto;
+  }
+  clear: left;
 }
 
 .os-solutions-container {
